--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                         <a href="#new-section" class="text-neutral-medium hover:text-sage-green px-3 py-2 text-sm font-medium transition-colors">Parenting Coordination</a>
                         <a href="#research" class="text-neutral-medium hover:text-sage-green px-3 py-2 text-sm font-medium transition-colors">Research</a>
                         <a href="#benefits" class="text-neutral-medium hover:text-sage-green px-3 py-2 text-sm font-medium transition-colors">Benefits</a>
-                        <a href="#subscribe" class="bg-sage-green text-white px-4 py-2 rounded-lg text-sm font-medium hover:bg-sage-green-dark transition-colors">Start SafeTalk - $50/mo</a>
+                        <a href="#subscribe" class="bg-emerald-600 text-white px-4 py-2 rounded-lg text-sm font-medium hover:bg-emerald-700 transition-colors">Start SafeTalk - $50/mo</a>
                         <a href="https://calendly.com/safetalkapp/safetalk-app-discussion?utm_source=facebook&utm_medium=paid_social&utm_campaign={{campaign.name}}&utm_adset={{adset.name}}&utm_content={{ad.name}}" target="_blank" class="bg-emerald-500 text-white px-4 py-2 rounded-lg text-sm font-medium hover:bg-emerald-600 transition-colors">Schedule SafeTalk Call</a>
                     </div>
                 </div>
@@ -245,7 +245,7 @@
                 <a href="#new-section" class="text-neutral-medium hover:text-sage-green block px-3 py-2 text-base font-medium">New Section</a>
                 <a href="#research" class="text-neutral-medium hover:text-sage-green block px-3 py-2 text-base font-medium">Research</a>
                 <a href="#benefits" class="text-neutral-medium hover:text-sage-green block px-3 py-2 text-base font-medium">Benefits</a>
-                <a href="#subscribe" class="bg-sage-green text-white block px-3 py-2 text-base font-medium rounded-lg mx-3 my-2 text-center hover:bg-sage-green-dark transition-colors">Start SafeTalk - $50/mo</a>
+                <a href="#subscribe" class="bg-emerald-600 text-white block px-3 py-2 text-base font-medium rounded-lg mx-3 my-2 text-center hover:bg-emerald-700 transition-colors">Start SafeTalk - $50/mo</a>
                 <a href="https://calendly.com/safetalkapp/safetalk-app-discussion?utm_source=facebook&utm_medium=paid_social&utm_campaign={{campaign.name}}&utm_adset={{adset.name}}&utm_content={{ad.name}}" target="_blank" class="bg-emerald-500 text-white block px-3 py-2 rounded-lg text-base font-medium mx-3 my-2 text-center hover:bg-emerald-600 transition-colors">Schedule SafeTalk Call</a>
             </div>
         </div>
