--- a/index.html
+++ b/index.html
@@ -1066,9 +1066,8 @@
                             <input type="checkbox" id="terms" name="terms" required 
                                 class="mt-1 mr-3 text-sage-green">
                             <span class="text-sm text-neutral-medium">
-                                I agree to the SafeTalk <a href="#" class="text-sage-green-dark underline">Terms of Service</a> 
-                                and <a href="#" class="text-sage-green-dark underline">Privacy Policy</a>. 
-                                I understand this is a monthly subscription that can be cancelled at any time.
+                                I agree to SafeTalk's terms of service and privacy policy. 
+                                I understand this is a monthly subscription that can be cancelled at any time by texting "STOP" to the SafeTalk number.
                             </span>
                         </label>
                     </div>
