--- a/index.html
+++ b/index.html
@@ -2571,16 +2571,14 @@
                 </div>
 
                 <div>
-                    <h3 class="font-semibold text-lg mb-3">6. Your Privacy Rights</h3>
-                    <p>You have the right to:</p>
+                    <h3 class="font-semibold text-lg mb-3">6. Your Privacy Control</h3>
+                    <p>Since SafeTalk operates entirely through SMS, your privacy control is simple:</p>
                     <ul class="list-disc list-inside ml-4 space-y-1">
-                        <li><strong>Access:</strong> Request copies of your personal data</li>
-                        <li><strong>Correction:</strong> Update or correct inaccurate information</li>
-                        <li><strong>Deletion:</strong> Request deletion of your personal data (subject to legal retention requirements)</li>
-                        <li><strong>Portability:</strong> Request transfer of your data in a portable format</li>
-                        <li><strong>Objection:</strong> Object to certain uses of your personal information</li>
+                        <li><strong>Stop Service:</strong> Text "STOP" to immediately cancel and stop all data processing</li>
+                        <li><strong>Data Questions:</strong> Text "PRIVACY" for information about your data</li>
+                        <li><strong>Account Changes:</strong> Text "HELP" for assistance with your account</li>
                     </ul>
-                    <p class="mt-3">To exercise these rights, contact us through the SafeTalk service with your request and identity verification.</p>
+                    <p class="mt-3">Your data is automatically deleted 30 days after service cancellation. For legal compliance requests, law enforcement agencies may contact our service provider.</p>
                 </div>
 
                 <div>
