--- a/index.html
+++ b/index.html
@@ -283,63 +283,6 @@
         </div>
     </section>
 
-    <!-- FEATURES SECTION -->
-    <section id="features" class="py-20 bg-white">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="text-center mb-16">
-                <h2 class="font-inter text-3xl md:text-4xl font-bold text-sage-green-dark mb-6">
-                    Complete Digital Parenting Coordination Platform
-                </h2>
-                <p class="text-xl text-neutral-medium max-w-4xl mx-auto">
-                    SafeTalk provides comprehensive support through message processing, re-framing, mediation, and co-parenting plan development — everything you need for peaceful family communication.
-                </p>
-            </div>
-
-            <!-- Features Grid -->
-            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-
-                <!-- Main Communication Features -->
-                <div class="bg-sage-green-soft border border-sage-green-light rounded-lg p-6">
-                    <div class="text-3xl mb-4">💬</div>
-                    <h3 class="font-inter text-xl font-semibold text-sage-green-dark mb-4">Message Processing & Re-framing</h3>
-                    <ul class="text-neutral-medium space-y-2 text-sm">
-                        <li>• Chat interface for co-parent communication</li>
-                        <li>• Processing of incoming messages for tone and clarity</li>
-                        <li>• "See unfiltered message" option for transparency</li>
-                        <li>• Response guidance with suggested options</li>
-                        <li>• Separate AI consultation chat for advice</li>
-                    </ul>
-                </div>
-
-                <!-- Mediation Features -->
-                <div class="bg-ocean-blue-soft border border-ocean-blue-light rounded-lg p-6">
-                    <div class="text-3xl mb-4">⚖️</div>
-                    <h3 class="font-inter text-xl font-semibold text-sage-green-dark mb-4">Conflict Resolution & Mediation</h3>
-                    <ul class="text-neutral-medium space-y-2 text-sm">
-                        <li>• Voluntary mediation when you need support</li>
-                        <li>• Automatic mediation when conflicts are detected</li>
-                        <li>• Guided process until both parties agree resolution is reached</li>
-                        <li>• Child-focused solution development</li>
-                        <li>• Neutral, empathetic mediation approach</li>
-                    </ul>
-                </div>
-
-                <!-- Co-Parenting Plan Creator -->
-                <div class="bg-neutral-soft border border-gray-200 rounded-lg p-6">
-                    <div class="text-3xl mb-4">📋</div>
-                    <h3 class="font-inter text-xl font-semibold text-sage-green-dark mb-4">Co-Parenting Plan Development</h3>
-                    <ul class="text-neutral-medium space-y-2 text-sm">
-                        <li>• Assessment process to understand family dynamics</li>
-                        <li>• Collaborative planning for parenting approaches</li>
-                        <li>• Mutual consent system for all agreements</li>
-                        <li>• Plan summary showing all agreed decisions</li>
-                        <li>• Progress tracking and court-ready documentation</li>
-                    </ul>
-                </div>
-
-            </div>
-        </div>
-    </section>
 
     <!-- PROBLEM SECTION -->
     <section id="problem" class="py-20 bg-neutral-soft">
@@ -774,73 +717,38 @@
         </div>
     </section>
 
-    <!-- NEW PLACEHOLDER SECTION -->
-    <section id="new-section" class="py-20">
+    <!-- FEATURES SECTION -->
+    <section id="features" class="py-20">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
                 <h2 class="font-inter text-3xl md:text-4xl font-bold text-sage-green-dark mb-6">
-                    The Power of SafeTalk Parenting Coordination
+                    Complete Digital Parenting Coordination Platform
                 </h2>
                 <p class="text-xl text-neutral-medium max-w-4xl mx-auto">
-                    You deserve compassionate support that fits your life as a co-parent. SafeTalk's SMS-based digital service brings parenting coordination directly to your phone through simple text messaging. Get expert mediation, conflict resolution, and child-focused guidance instantly — designed for busy parents who need help when conflicts happen:
+                    SafeTalk provides comprehensive support through message processing, re-framing, mediation, and co-parenting plan development — everything you need for peaceful family communication.
                 </p>
             </div>
-            <!-- Benefits Grid -->
-            <div class="grid md:grid-cols-3 gap-6 lg:gap-8 mt-12">
-                <!-- Benefit 1 -->
-                <div class="bg-white rounded-lg p-6 shadow-sm border border-gray-100">
-                    <div class="text-3xl mb-3">⚖️</div>
-                    <h3 class="font-inter text-xl font-semibold text-sage-green-dark mb-3">Expert Mediation & Conflict Resolution</h3>
-                    <p class="text-neutral-medium">Our SMS service provides instant access to expert mediation through simple text messaging. Get compassionate guidance to de-escalate conflicts and find child-focused solutions anytime, anywhere — no scheduling appointments or waiting for office hours.</p>
+            <!-- Features Grid -->
+            <div class="grid md:grid-cols-3 gap-8">
+                <!-- Message Processing & Re-framing -->
+                <div class="bg-white p-8 rounded-lg shadow-md">
+                    <div class="text-sage-green text-4xl mb-4">💬</div>
+                    <h3 class="font-inter text-xl font-semibold text-sage-green-dark mb-4">Message Processing & Re-framing</h3>
+                    <p class="text-neutral-medium">Transform difficult communication into respectful dialogue with processing and re-framing support. Get response guidance and transparency options for every interaction.</p>
                 </div>
 
-                <!-- Benefit 2 -->
-                <div class="bg-white rounded-lg p-6 shadow-sm border border-gray-100">
-                    <div class="text-3xl mb-3">💼</div>
-                    <h3 class="font-inter text-xl font-semibold text-sage-green-dark mb-3">Affordable Expert Support</h3>
-                    <p class="text-neutral-medium">Expert support shouldn't break your budget. Our SMS service delivers compassionate coordination through simple text messaging at a price point that works for real families — because you deserve help without financial stress.</p>
+                <!-- Conflict Resolution & Mediation -->
+                <div class="bg-white p-8 rounded-lg shadow-md">
+                    <div class="text-ocean-blue text-4xl mb-4">⚖️</div>
+                    <h3 class="font-inter text-xl font-semibold text-sage-green-dark mb-4">Conflict Resolution & Mediation</h3>
+                    <p class="text-neutral-medium">Access voluntary or automatic mediation when conflicts arise. Get guided support until both parties agree on child-focused solutions that work for your family.</p>
                 </div>
 
-                <!-- Benefit 3 -->
-                <div class="bg-white rounded-lg p-6 shadow-sm border border-gray-100">
-                    <div class="text-3xl mb-3">👶</div>
-                    <h3 class="font-inter text-xl font-semibold text-sage-green-dark mb-3">Child-Focused Decision Making</h3>
-                    <p class="text-neutral-medium">Every recommendation prioritizes your children's best interests, emotional well-being, and developmental needs — the cornerstone of effective parenting coordination practice.</p>
-                </div>
-
-                <!-- Benefit 4 -->
-                <div class="bg-white rounded-lg p-6 shadow-sm border border-gray-100">
-                    <div class="text-3xl mb-3">🌅</div>
-                    <h3 class="font-inter text-xl font-semibold text-sage-green-dark mb-3">24/7 Availability When You Need It</h3>
-                    <p class="text-neutral-medium">Parenting conflicts don't wait for business hours. Our SMS service is ready when you need it most — at 2 AM, during the school run, or on weekends. Get immediate compassionate support through text messaging whenever your family needs guidance.</p>
-                </div>
-
-                <!-- Benefit 5 -->
-                <div class="bg-white rounded-lg p-6 shadow-sm border border-gray-100">
-                    <div class="text-3xl mb-3">📝</div>
-                    <h3 class="font-inter text-xl font-semibold text-sage-green-dark mb-3">Comprehensive Documentation & Records</h3>
-                    <p class="text-neutral-medium">Our SMS service automatically creates detailed records of all text interactions, decisions, and agreements. Get thorough documentation that's organized, searchable, and easily accessible for your family records — all without extra paperwork.</p>
-                </div>
-
-                <!-- Benefit 6 -->
-                <div class="bg-white rounded-lg p-6 shadow-sm border border-gray-100">
-                    <div class="text-3xl mb-3">🎯</div>
-                    <h3 class="font-inter text-xl font-semibold text-sage-green-dark mb-3">Neutral, Unbiased Perspective</h3>
-                    <p class="text-neutral-medium">Receive truly neutral guidance through SMS that doesn't favor either parent. Professional coordinators are trained to remain impartial and focus solely on what's best for your children.</p>
-                </div>
-
-                <!-- Benefit 7 -->
-                <div class="bg-white rounded-lg p-6 shadow-sm border border-gray-100">
-                    <div class="text-3xl mb-3">🚑</div>
-                    <h3 class="font-inter text-xl font-semibold text-sage-green-dark mb-3">Crisis Intervention & De-escalation</h3>
-                    <p class="text-neutral-medium">When emotions run high, our SMS service provides instant de-escalation support through text messaging. Get immediate professional intervention to cool down situations before they spiral — available when you need it most.</p>
-                </div>
-
-                <!-- Benefit 8 -->
-                <div class="bg-white rounded-lg p-6 shadow-sm border border-gray-100">
-                    <div class="text-3xl mb-3">🌱</div>
-                    <h3 class="font-inter text-xl font-semibold text-sage-green-dark mb-3">Long-term Relationship Building</h3>
-                    <p class="text-neutral-medium">SafeTalk's SMS service learns your family's patterns and helps build better co-parenting skills over time. Get personalized text-based guidance that evolves with your needs, creating lasting positive change through consistent support.</p>
+                <!-- Co-Parenting Plan Development -->
+                <div class="bg-white p-8 rounded-lg shadow-md">
+                    <div class="text-orange-500 text-4xl mb-4">📋</div>
+                    <h3 class="font-inter text-xl font-semibold text-sage-green-dark mb-4">Co-Parenting Plan Development</h3>
+                    <p class="text-neutral-medium">Create collaborative parenting agreements through assessment and mutual consent. Track progress and maintain comprehensive documentation for court-ready plans.</p>
                 </div>
             </div>
         </div>
