--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -268,7 +268,7 @@
                             <h3 class="text-lg font-medium text-gray-800 mb-2">Data Retention</h3>
                             <ul class="list-disc list-inside text-gray-700 space-y-1 ml-4">
                                 <li>Active account data: While account is active</li>
-                                <li>SMS content and metadata: 90 days after account termination</li>
+                                <li>Message content and metadata: 90 days after account termination</li>
                                 <li>Consent logs: 7 years (regulatory requirement)</li>
                                 <li>Payment records: Per Stripe's retention policy</li>
                             </ul>
@@ -278,26 +278,26 @@
                         <div>
                             <h3 class="text-lg font-medium text-gray-800 mb-2">Breach Notification</h3>
                             <p class="text-gray-700 leading-relaxed">
-                                If we discover a data breach that poses a risk to your rights, we will notify you within 72 hours via SMS or email, describing the incident, data involved, our response steps, and protective measures you should take.
+                                If we discover a data breach that poses a risk to your rights, we will notify you within 72 hours via the app, email, or other available means, describing the incident, data involved, our response steps, and protective measures you should take.
                             </p>
                         </div>
                     </div>
                 </section>
 
                 <section>
-                    <h2 class="text-xl font-semibold text-gray-800 mb-3">6. TCPA Compliance & Consent Records</h2>
+                    <h2 class="text-xl font-semibold text-gray-800 mb-3">6. App Store Compliance & Consent Records</h2>
 
-                    <p class="text-gray-700 leading-relaxed mb-4">We maintain detailed opt-in records to comply with the TCPA and demonstrate valid consent.</p>
+                    <p class="text-gray-700 leading-relaxed mb-4">We maintain detailed consent records to comply with app store requirements and demonstrate valid user consent.</p>
 
                     <div class="space-y-3">
                         <p class="text-gray-700 leading-relaxed">Logged information includes:</p>
                         <ul class="list-disc list-inside text-gray-700 space-y-1 ml-4">
                             <li>Consent timestamp (server time, UTC)</li>
                             <li>IP address and technical details (for verification)</li>
-                            <li>User agent and browser information</li>
+                            <li>Device and app version information</li>
                             <li>Version of consent language shown</li>
                             <li>Individual confirmation for each required consent category</li>
-                            <li>Your phone number and associated contact details</li>
+                            <li>Your contact details and account information</li>
                         </ul>
                         <p class="text-gray-700 text-sm mt-3">These records are securely stored for compliance and audit purposes.</p>
                     </div>
@@ -324,9 +324,9 @@
                         <div>
                             <h3 class="text-lg font-medium text-gray-800 mb-2">Communication Preferences</h3>
                             <ul class="list-disc list-inside text-gray-700 space-y-1 ml-4">
-                                <li><strong>Opt out:</strong> Reply STOP to discontinue SMS communications</li>
-                                <li><strong>Help:</strong> Reply HELP for support instructions</li>
-                                <li><strong>Service notifications:</strong> Account and security alerts</li>
+                                <li><strong>Notifications:</strong> Manage push notifications through your device settings</li>
+                                <li><strong>Account deletion:</strong> Request account deletion through app settings or contact support</li>
+                                <li><strong>Service notifications:</strong> Essential account and security alerts</li>
                             </ul>
                         </div>
 
@@ -346,7 +346,7 @@
 
                     <div class="space-y-3">
                         <p class="text-gray-700 leading-relaxed">
-                            <strong>Age Restrictions:</strong> We do not knowingly collect personal information directly from children under 13. If children's names or details appear within SMS communications, that data is processed only as part of the co-parenting context.
+                            <strong>Age Restrictions:</strong> We do not knowingly collect personal information directly from children under 13. If children's names or details appear within app communications, that data is processed only as part of the co-parenting context.
                         </p>
                         <p class="text-gray-700 leading-relaxed">
                             <strong>Parental Responsibility:</strong> Parents and guardians are responsible for lawful sharing of child-related information.
