--- a/index.html
+++ b/index.html
@@ -505,6 +505,58 @@
         </div>
     </section>
 
+    <!-- APP DOWNLOAD SECTION -->
+    <section class="py-20 bg-white">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="relative overflow-hidden bg-gradient-to-br from-emerald-600 via-emerald-700 to-emerald-800 rounded-2xl shadow-2xl py-16 px-8">
+                <!-- Decorative Background Elements -->
+                <div class="absolute top-0 right-0 w-64 h-64 bg-white opacity-5 rounded-full -mr-32 -mt-32"></div>
+                <div class="absolute bottom-0 left-0 w-48 h-48 bg-white opacity-5 rounded-full -ml-24 -mb-24"></div>
+
+                <div class="relative text-center">
+                    <div class="inline-block mb-6">
+                        <div class="flex items-center justify-center gap-3 bg-white/20 backdrop-blur-sm px-6 py-2 rounded-full">
+                            <span class="text-white text-sm font-semibold uppercase tracking-wider">Coming Soon</span>
+                        </div>
+                    </div>
+
+                    <h3 class="font-inter text-3xl md:text-4xl font-bold text-white mb-4">
+                        Download SafeTalk on Your Device
+                    </h3>
+                    <p class="text-xl text-emerald-50 mb-10 max-w-2xl mx-auto">
+                        Be among the first to experience co-parenting without conflict. Available soon on iOS and Android.
+                    </p>
+
+                    <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
+                        <div class="group relative bg-white/10 backdrop-blur-md border-2 border-white/30 px-10 py-5 rounded-xl transition-all duration-300 hover:bg-white/20 hover:border-white/50 hover:scale-105">
+                            <div class="flex items-center gap-3">
+                                <svg class="w-8 h-8 text-white" fill="currentColor" viewBox="0 0 24 24">
+                                    <path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"/>
+                                </svg>
+                                <div class="text-left">
+                                    <div class="text-white/70 text-xs uppercase tracking-wide">Download on the</div>
+                                    <div class="text-white text-xl font-semibold">App Store</div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="group relative bg-white/10 backdrop-blur-md border-2 border-white/30 px-10 py-5 rounded-xl transition-all duration-300 hover:bg-white/20 hover:border-white/50 hover:scale-105">
+                            <div class="flex items-center gap-3">
+                                <svg class="w-8 h-8 text-white" fill="currentColor" viewBox="0 0 24 24">
+                                    <path d="M3,20.5V3.5C3,2.91 3.34,2.39 3.84,2.15L13.69,12L3.84,21.85C3.34,21.6 3,21.09 3,20.5M16.81,15.12L6.05,21.34L14.54,12.85L16.81,15.12M20.16,10.81C20.5,11.08 20.75,11.5 20.75,12C20.75,12.5 20.53,12.9 20.18,13.18L17.89,14.5L15.39,12L17.89,9.5L20.16,10.81M6.05,2.66L16.81,8.88L14.54,11.15L6.05,2.66Z"/>
+                                </svg>
+                                <div class="text-left">
+                                    <div class="text-white/70 text-xs uppercase tracking-wide">Get it on</div>
+                                    <div class="text-white text-xl font-semibold">Google Play</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- COMPREHENSIVE FEATURES SECTION -->
     <section id="features" class="py-20 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -587,54 +639,6 @@
                             <span>Role-based access control</span>
                         </li>
                     </ul>
-                </div>
-            </div>
-
-            <!-- APP DOWNLOAD SECTION -->
-            <div class="relative overflow-hidden bg-gradient-to-br from-emerald-600 via-emerald-700 to-emerald-800 rounded-2xl shadow-2xl py-16 px-8">
-                <!-- Decorative Background Elements -->
-                <div class="absolute top-0 right-0 w-64 h-64 bg-white opacity-5 rounded-full -mr-32 -mt-32"></div>
-                <div class="absolute bottom-0 left-0 w-48 h-48 bg-white opacity-5 rounded-full -ml-24 -mb-24"></div>
-
-                <div class="relative text-center">
-                    <div class="inline-block mb-6">
-                        <div class="flex items-center justify-center gap-3 bg-white/20 backdrop-blur-sm px-6 py-2 rounded-full">
-                            <span class="text-white text-sm font-semibold uppercase tracking-wider">Coming Soon</span>
-                        </div>
-                    </div>
-
-                    <h3 class="font-inter text-3xl md:text-4xl font-bold text-white mb-4">
-                        Download SafeTalk on Your Device
-                    </h3>
-                    <p class="text-xl text-emerald-50 mb-10 max-w-2xl mx-auto">
-                        Be among the first to experience co-parenting without conflict. Available soon on iOS and Android.
-                    </p>
-
-                    <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
-                        <div class="group relative bg-white/10 backdrop-blur-md border-2 border-white/30 px-10 py-5 rounded-xl transition-all duration-300 hover:bg-white/20 hover:border-white/50 hover:scale-105">
-                            <div class="flex items-center gap-3">
-                                <svg class="w-8 h-8 text-white" fill="currentColor" viewBox="0 0 24 24">
-                                    <path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"/>
-                                </svg>
-                                <div class="text-left">
-                                    <div class="text-white/70 text-xs uppercase tracking-wide">Download on the</div>
-                                    <div class="text-white text-xl font-semibold">App Store</div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="group relative bg-white/10 backdrop-blur-md border-2 border-white/30 px-10 py-5 rounded-xl transition-all duration-300 hover:bg-white/20 hover:border-white/50 hover:scale-105">
-                            <div class="flex items-center gap-3">
-                                <svg class="w-8 h-8 text-white" fill="currentColor" viewBox="0 0 24 24">
-                                    <path d="M3,20.5V3.5C3,2.91 3.34,2.39 3.84,2.15L13.69,12L3.84,21.85C3.34,21.6 3,21.09 3,20.5M16.81,15.12L6.05,21.34L14.54,12.85L16.81,15.12M20.16,10.81C20.5,11.08 20.75,11.5 20.75,12C20.75,12.5 20.53,12.9 20.18,13.18L17.89,14.5L15.39,12L17.89,9.5L20.16,10.81M6.05,2.66L16.81,8.88L14.54,11.15L6.05,2.66Z"/>
-                                </svg>
-                                <div class="text-left">
-                                    <div class="text-white/70 text-xs uppercase tracking-wide">Get it on</div>
-                                    <div class="text-white text-xl font-semibold">Google Play</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
