--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                         <a href="#how-it-works" class="text-neutral-medium hover:text-sage-green px-3 py-2 text-sm font-medium transition-colors">How It Works</a>
                         <a href="#features" class="text-neutral-medium hover:text-sage-green px-3 py-2 text-sm font-medium transition-colors">Features</a>
                         <a href="#research" class="text-neutral-medium hover:text-sage-green px-3 py-2 text-sm font-medium transition-colors">Research</a>
-                        <a href="#features" class="text-neutral-medium hover:text-sage-green px-3 py-2 text-sm font-medium transition-colors">Download App</a>
+                        <a href="#download" class="text-neutral-medium hover:text-sage-green px-3 py-2 text-sm font-medium transition-colors">Download App</a>
                         <a href="https://calendly.com/safetalkapp/safetalk-app-discussion?utm_source=facebook&utm_medium=paid_social&utm_campaign={{campaign.name}}&utm_adset={{adset.name}}&utm_content={{ad.name}}" target="_blank" class="bg-emerald-500 text-white px-4 py-2 rounded-lg text-sm font-medium hover:bg-emerald-600 transition-colors">Book a Call</a>
                     </div>
                 </div>
@@ -275,7 +275,7 @@
                 <a href="#how-it-works" class="text-neutral-medium hover:text-sage-green block px-3 py-2 text-base font-medium">How It Works</a>
                 <a href="#features" class="text-neutral-medium hover:text-sage-green block px-3 py-2 text-base font-medium">Features</a>
                 <a href="#research" class="text-neutral-medium hover:text-sage-green block px-3 py-2 text-base font-medium">Research</a>
-                <a href="#features" class="text-neutral-medium hover:text-sage-green block px-3 py-2 text-base font-medium">Download App</a>
+                <a href="#download" class="text-neutral-medium hover:text-sage-green block px-3 py-2 text-base font-medium">Download App</a>
                 <a href="https://calendly.com/safetalkapp/safetalk-app-discussion?utm_source=facebook&utm_medium=paid_social&utm_campaign={{campaign.name}}&utm_adset={{adset.name}}&utm_content={{ad.name}}" target="_blank" class="bg-emerald-500 text-white block px-3 py-2 rounded-lg text-base font-medium mx-3 my-2 text-center hover:bg-emerald-600 transition-colors">Book a Call</a>
             </div>
         </div>
@@ -506,7 +506,7 @@
     </section>
 
     <!-- APP DOWNLOAD SECTION -->
-    <section class="py-20 bg-white">
+    <section id="download" class="py-20 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="relative overflow-hidden bg-gradient-to-br from-emerald-600 via-emerald-700 to-emerald-800 rounded-2xl shadow-2xl py-16 px-8">
                 <!-- Decorative Background Elements -->
