--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
             <div class="grid md:grid-cols-2 gap-16 max-w-5xl mx-auto items-start">
                 <!-- App Main Image -->
                 <div class="flex justify-center">
-                    <img src="images/app.png" alt="SafeTalk interface showing thoughtful communication patterns" class="w-full max-w-md h-auto">
+                    <img src="images/safetalk slideshow.png" alt="SafeTalk interface showing thoughtful communication patterns" class="w-full max-w-md h-auto">
                 </div>
 
                 <!-- App Snippet Image -->
